syntax = "proto3";

option csharp_namespace = "Protos.UserProfiles";

package userprofiles;

service UserProfiles {
  rpc getUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc registerUserProfile (CreateUserProfileRequest) returns (CreateUserProfileResponse);
  rpc updateUserProfile (UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

message CreateUserProfileRequest {
  UserProfileDto UserProfile = 1;
}

message CreateUserProfileResponse {
  
}

message UpdateUserProfileRequest {
  UserProfileDto UserProfile = 1;
}

message UpdateUserProfileResponse {

}

message GetUserProfileRequest {
  string Email = 1;
}

message GetUserProfileResponse {
  UserProfileDto UserProfile = 1;
}

message AddressDto {
  string Street = 1;
  string City = 2;
}

message ContactDto {
  string Phone = 1;
  string Mail = 2;
}

message DogDto {
  string Name = 1;
  string Kennel = 2;
  string ChipNumber = 3;
  string Pedigree = 4;
  string BirthDate = 5;
  string DeathDate = 6;
}

message UserProfileDto {
  string Id = 1;
  string UserId = 2;
  string CompetitorId = 3;
  string Email = 4;
  string FirstName = 5;
  string LastName = 6;
  string Nickname = 7;
  string Birthday = 8;
  AddressDto Address = 9;
  ContactDto Contact = 10;
  repeated DogDto Dogs = 11;
}